<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_newrequest"
        android:gravity="center|center_vertical"
        android:text="@string/newrequest" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_inworkrequest"
        android:gravity="center|center_vertical"
        android:text="@string/inworkrequest" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_criticalrequest"
        android:gravity="center|center_vertical"
        android:text="@string/criticalrequest" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_donerequest"
        android:gravity="center|center_vertical"
        android:text="@string/donerequest" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_searchrequest"
        android:gravity="center|center_vertical"
        android:text="@string/searchrequest" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_analiserequest"
        android:gravity="center|center_vertical"
        android:text="@string/analiserequest" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_baseknowledge"
        android:gravity="center|center_vertical"
        android:text="@string/baseknowlege" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_settings"
        android:gravity="center|center_vertical"
        android:text="@string/settings" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_kontacktus"
        android:gravity="center|center_vertical"
        android:text="@string/contactus" />


</LinearLayout>